Remove very old neuron plotter, add training parameters

--- a/Kian_code/Learn Transform.ipynb
+++ b/Kian_code/Learn Transform.ipynb
@@ -524,75 +524,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a35ea012",
+   "id": "81624d9a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random\n",
-    "import string\n",
+    "q1_split = (-torch.pi, torch.pi)\n",
+    "batch_size = 512\n",
+    "train_part = 0.7\n",
     "\n",
-    "max_neurons = 4\n",
-    "blank_layer = [None for _ in range(max_neurons)]\n",
-    "\n",
-    "table_layers = []\n",
-    "for idx, param in enumerate(model.parameters()):\n",
-    "    layer = param.data\n",
-    "    num_parallel = layer.shape[0]\n",
-    "    side_padding = int((max_neurons - num_parallel)/2)\n",
-    "    \n",
-    "    if idx % 2 == 0:\n",
-    "        \n",
-    "        table_layer = blank_layer.copy()\n",
-    "        table_layer[0] = \"weights\" + str(idx//2+1)\n",
-    "        table_layers.append(table_layer)\n",
-    "        for i in range(layer.shape[1]):\n",
-    "            table_layer = blank_layer.copy()\n",
-    "            for j in range(num_parallel):\n",
-    "                table_layer[j+side_padding] = '{:.2e}'.format(layer[j][i].item())\n",
-    "            table_layers.append(table_layer)\n",
-    "        table_layers.append(blank_layer)\n",
-    "            \n",
-    "    else:  \n",
-    "        \n",
-    "        table_layer = blank_layer.copy()\n",
-    "        table_layer[0] = \"bias\" + str(idx//2+1)\n",
-    "        table_layers.append(table_layer)\n",
-    "        table_layer = blank_layer.copy()\n",
-    "        for j in range(num_parallel):\n",
-    "            table_layer[j+side_padding] = '{:.2e}'.format(layer[j].item())\n",
-    "        table_layers.append(table_layer)\n",
-    "        table_layers.append(blank_layer)\n",
-    "\n",
-    "numeric_values = np.zeros((len(table_layers), max_neurons))\n",
-    "for i, row in enumerate(table_layers):\n",
-    "    for j, item in enumerate(row):\n",
-    "        if item not in (None, \"weights1\", \"weights2\", \"bias1\", \"bias2\"):  # Replace with relevant layer names\n",
-    "            try:\n",
-    "                numeric_values[i, j] = (float(item))\n",
-    "            except ValueError:\n",
-    "                pass\n",
-    "        \n",
-    "min_val, max_val = numeric_values.min(), numeric_values.max()\n",
+    "rp = robot_parameters.LUMPED_PARAMETERS\n",
+    "num_epochs = 1001\n",
+    "lr = 1e-3\n",
     "\n",
     "\n",
-    "# Step 2: Apply a logarithmic transformation, setting a small threshold to avoid log(0)\n",
-    "threshold = 1e-5\n",
-    "log_values = np.log10(np.clip(np.abs(numeric_values), threshold, None))\n",
+    "plt.ion()\n",
     "\n",
-    "# Normalize the log-scaled values to range between 0 and 1\n",
-    "normalized_values = (log_values - log_values.min()) / (log_values.max() - log_values.min())\n",
-    "colors = plt.cm.Blues(normalized_values)\n",
+    "current_time = datetime.now().strftime(\"%Y%m%d%H%M\")\n",
     "\n",
-    "        \n",
-    "# Plot the table\n",
-    "fig, ax = plt.subplots(figsize=(10, 6))\n",
-    "ax.axis('tight')\n",
-    "ax.axis('off')\n",
+    "shifted_points = mask_points(q1_split, clockwise=train_clockwise)\n",
+    "points_plotter(shifted_points)\n",
+    "dataset = make_dataset(shifted_points)\n",
+    "(train_dataloader, val_dataloader) = make_dataloaders(dataset=dataset, batch_size=batch_size, train_part=train_part)\n",
     "\n",
-    "# Create table\n",
-    "table = plt.table(cellText=table_layers, cellColours=colors, loc='center', cellLoc='center')\n",
+    "outputs = []\n",
+    "model, train_losses, val_losses, file_path = train_AE_model(rp, device, lr, num_epochs, q1_split, train_dataloader, \n",
+    "                                                        val_dataloader, current_time)\n",
     "\n",
-    "plt.show()"
+    "plot_loss(train_losses, val_losses, log = True)\n",
+    "mapping_functions = (partial(theta_1_single,model), \n",
+    "                        partial(theta_2_single,model), \n",
+    "                        partial(q_hat_1_single,model), \n",
+    "                        partial(q_hat_2_single,model))\n",
+    "\n",
+    "save_model(model, file_path)\n"
    ]
   },
   {
