Make figure and animation showing coordinate transform

--- a/Kian_code/Learn Transform.ipynb
+++ b/Kian_code/Learn Transform.ipynb
@@ -560,12 +560,16 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "9e32c736",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f76c8b09",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "\n",
-    "    "
+    "th_plotter = theta_visualizer.theta_plotter(rp=rp, n_lines=50, device=device, \n",
+    "                                            mapping_functions=mapping_functions, mask_split=q1_split)\n",
+    "#th_plotter.make_figure(\"theta_learned_full.png\")\n",
+    "#th_plotter.make_animation(\"theta_learned_full.mp4\", duration = 4, fps = 20)"
    ]
   },
   {
