Remove autoencoder definition (to separate file), add plotting code

--- a/Kian_code/Learn Transform.ipynb
+++ b/Kian_code/Learn Transform.ipynb
@@ -575,44 +575,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c5d7144",
+   "id": "ab9b45ea",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Autoencoder2(nn.Module):\n",
-    "    def __init__(self, rp):\n",
-    "        super().__init__()\n",
-    "        self.encoder = nn.Sequential(\n",
-    "            nn.Linear(2, 3),\n",
-    "            nn.Sigmoid(),\n",
-    "            nn.Linear(3, 4),\n",
-    "            #nn.Sigmoid(),\n",
-    "            #nn.Linear(4, 4)\n",
-    "        )\n",
-    "        \n",
-    "        \n",
-    "        self.decoder = nn.Sequential(\n",
-    "            #nn.Linear(4, 4),\n",
-    "            #nn.Sigmoid(),\n",
-    "            nn.Linear(4, 3),\n",
-    "            nn.Sigmoid(),\n",
-    "            nn.Linear(3, 2)\n",
-    "        )\n",
-    "        \n",
-    "        self.rp = rp\n",
+    "%matplotlib widget\n",
     "\n",
-    "    def encoder_nn(self, q):\n",
-    "        latent = self.encoder(q)\n",
-    "        J_h_inv_1 = latent[:,0:2]\n",
-    "        J_h_inv_2 = latent[:,2:4]\n",
-    "        J_h_inv = torch.stack((J_h_inv_1, J_h_inv_2), dim=1)\n",
-    "        return J_h_inv, latent\n",
-    "    \n",
-    "    def forward(self, q):\n",
-    "        J_h_inv, latent = self.encoder_nn(q)\n",
     "\n",
-    "        q_hat = self.decoder(latent)\n",
-    "        return J_h_inv, q_hat"
+    "q1_split = (-torch.pi, torch.pi)\n",
+    "plt.ion()\n",
+    "model = autoencoders.Autoencoder_double(rp).to(device)\n",
+    "model_location = 'Models/Split_AEs/Lumped_Mass_202503051257.pth'\n",
+    "model.load_state_dict(torch.load(model_location, weights_only=True))\n",
+    "plot_points = mask_points(q1_split, clockwise = train_clockwise)\n",
+    "points_plotter(plot_points[::5])\n",
+    "plot_dataset = make_dataset(plot_points)\n",
+    "plot_dataloader = make_plot_dataloader(plot_dataset)\n",
+    "plot_model_performance(model, plot_dataloader)"
    ]
   },
   {
