Remove old training loop, add color gradient visualiser of th as function of q in xy space

--- a/Kian_code/Learn Transform.ipynb
+++ b/Kian_code/Learn Transform.ipynb
@@ -597,106 +597,99 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58e337d0",
+   "id": "e2419d60",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "%matplotlib widget\n",
-    "\n",
-    "current_time = datetime.now().strftime(\"%Y%m%d%H%M\")\n",
-    "save_directory = os.path.join(os.getcwd(), \"Models\")\n",
-    "os.makedirs(save_directory, exist_ok=True)\n",
-    "file_name = f\"Lumped_Mass_{current_time}.pth\"\n",
-    "file_path = os.path.join(save_directory, file_name)\n",
-    "\n",
-    "load_path = os.path.normpath(\"/home/kian/Documents/Thesis/ICS_fork/ics-pa-sv/Kian_code/Models/Lumped_Mass_202411271337.pth\")\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "\n",
-    "rp = robot_parameters.LUMPED_PARAMETERS\n",
-    "num_epochs = 2401\n",
-    "\n",
-    "print(file_path)\n",
-    "model = Autoencoder2(rp).to(device)  # Move model to GPU\n",
-    "#model.load_state_dict(torch.load(load_path, weights_only=True))\n",
-    "criterion = nn.MSELoss()\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=1e-4)#, weight_decay=1e-6)\n",
-    "#optimizer = torch.optim.RMSprop(model.parameters(), lr=1e-2, alpha=0.99, eps=1e-08)\n",
-    "scheduler = torch.optim.lr_scheduler.ExponentialLR(optimizer, gamma=0.1 ** (1 / num_epochs))\n",
+    "model_ana = autoencoders.Analytic_transformer(rp)\n",
     "\n",
     "\n",
+    "models = [model_ana, model]\n",
+    "model_names = [\"Analytic\", \"Neural Network\"]\n",
     "\n",
-    "l_weights = [1,\n",
-    "             1,\n",
-    "             1e-1,\n",
-    "             1e-2]\n",
-    "outputs = []\n",
-    "\n",
-    "\n",
-    "\n",
-    "plt.ion()\n",
-    "\n",
-    "for epoch in range(num_epochs):\n",
-    "    for index, batch in enumerate(train_dataloader):\n",
-    "        batch_size = batch[0].shape[0]\n",
-    "        q = batch[0][:, 0:2].to(device)\n",
-    "        q.requires_grad = True\n",
-    "        q_d = batch[0][:, 2:4].to(device)\n",
-    "        \n",
-    "        J_h_inv, q_hat = model(q)  \n",
-    "        J_h_inv_trans = J_h_inv.transpose(1,2)\n",
-    "                \n",
-    "        matrices_vmap = torch.vmap(dynamics.dynamical_matrices, \n",
-    "                                   in_dims=(None, 0, 0))\n",
-    "\n",
-    "        M_q, C_q, G_q = matrices_vmap(rp, q, q_d)\n",
-    "        \n",
-    "        M_th, C_th, G_th = transforms.transform_dynamical_from_inverse(M_q, C_q, G_q, J_h_inv, J_h_inv_trans)      \n",
-    "        \n",
-    "        #loss_reconstruction = loss_terms.loss_reconstruction(q, q_hat)\n",
-    "        loss_diagonality_geo_mean = loss_terms.loss_diagonality_geo_mean(M_th, batch_size, device)\n",
-    "        loss_diagonality_trace = loss_terms.loss_diagonality_trace(M_th, batch_size, device)\n",
-    "        loss_diagonality_smallest = loss_terms.loss_diagonality_smallest(M_th, batch_size, device)\n",
-    "        ### Use J@J^T = eye to avoid needing to calculate the Jacobian inverse for efficiency. \n",
-    "        #loss_J_h_unitary = loss_terms.loss_J_h_unitary(J_h, batch_size, device)\n",
-    "        #loss_J_h_cheat = loss_terms.loss_J_h_cheat(J_h, J_h_ana)\n",
-    "        #loss_M_th_cheat = loss_terms.loss_M_th_cheat(M_th, rp, q, q_d, batch_size)\n",
-    "        #l1_norm = loss_terms.loss_l1(model)\n",
-    "        \n",
-    "        #loss_diagonality = 10 * loss_diagonality_geo_mean + loss_diagonality_smallest + 100 * loss_diagonality_trace\n",
-    "        loss_diagonality = loss_diagonality_geo_mean\n",
+    "def check_clockwise_vectorized(q):\n",
+    "    \"\"\"\n",
+    "    Expects q to be a tensor of shape (N,2) where each row is [q1, q2].\n",
+    "    Returns two boolean masks: (cw_mask, ccw_mask), where:\n",
+    "      - cw_mask[i] is True if the i-th configuration is elbow clockwise.\n",
+    "      - ccw_mask[i] is True if the i-th configuration is elbow counterclockwise.\n",
+    "    \n",
+    "    The logic is as follows (from your original function):\n",
+    "      If q2 lies between q1 and q1+π, or between q1-2π and q1-π, then the configuration\n",
+    "      is considered counterclockwise. Otherwise it is clockwise.\n",
+    "    \"\"\"\n",
+    "    q1 = q[:, 0]\n",
+    "    q2 = q[:, 1]\n",
+    "    cond_ccw = ((q2 >= q1) & (q2 <= q1 + torch.pi))\n",
+    "    cw_mask = ~cond_ccw\n",
+    "    ccw_mask = cond_ccw\n",
+    "    return cw_mask, ccw_mask\n",
     "\n",
     "\n",
-    "        loss = loss_diagonality #+ 0.2 * loss_J_h_unitary\n",
+    "# Define the number of grid points along each dimension.\n",
+    "n_points = 200\n",
     "\n",
-    "        \n",
-    "        #loss = loss_J_h_cheat\n",
+    "# Create 1D tensors for q1 and q2 in the range [-pi, 0]\n",
+    "q1_vals = torch.linspace(-np.pi, np.pi, n_points)\n",
+    "q2_vals = torch.linspace(-np.pi, 2*np.pi, n_points)\n",
     "\n",
+    "# Create a 2D grid (meshgrid) of q values.\n",
+    "# (Note: using indexing='ij' so that the first axis corresponds to q1 and the second to q2)\n",
+    "q1_grid, q2_grid = torch.meshgrid(q1_vals, q2_vals, indexing='ij')\n",
     "\n",
-    "        optimizer.zero_grad()\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
+    "# Stack the grid to get a tensor of shape (n_points*n_points, 2)\n",
+    "q_grid = torch.stack([q1_grid.flatten(), q2_grid.flatten()], dim=1).to(device)\n",
     "\n",
-    " \n",
+    "# === Compute theta1 and theta2 using the analytic encoder functions ===\n",
+    "# We use torch.vmap to evaluate the functions over the batch of q values.\n",
+    "# Note: encoder_theta_1_ana and encoder_theta_2_ana each return a tuple (theta, theta).\n",
     "\n",
-    "    if epoch % 400 == 0:\n",
-    "        print(f'Epoch:{epoch+1}, Loss:{loss.item():.9f}')#, LR:{scheduler.get_last_lr():.7f}')\n",
-    "        print(\"Weighted loss_diagonality_geo_mean:\", loss_diagonality_geo_mean)\n",
-    "        #print(\"Weighted loss_diagonality_smallest:\", loss_diagonality_smallest)\n",
-    "        #print(\"Weighted loss_diagonality_trace:\", 100 * loss_diagonality_trace)\n",
-    "        #print(\"Weighted loss Jh unitary:\", 0.2 * loss_J_h_unitary)\n",
-    "    if epoch % 1200 == 0 and epoch > 0:\n",
-    "        #plotters.plot_h2(model, device, rp, epoch)\n",
-    "        #plotters.plot_J_h(model, device, rp, epoch, plot_index = 0)\n",
-    "        #plotters.plot_J_h(model, device, rp, epoch, plot_index = 1)\n",
-    "        plotters.plot_decoupling_inv(model, device, rp, epoch)\n",
-    "    scheduler.step()\n",
-    "\n",
-    "    outputs.append((epoch, loss, q, q_hat, J_h_inv, M_th))\n",
+    "print(q_grid.size())\n",
+    "print(q_grid)\n",
     "\n",
     "\n",
-    "torch.save(model.state_dict(), file_path)\n",
-    "print(f\"Model parameters saved to {file_path}\")"
+    "for model, model_name in zip(models, model_names):\n",
+    "  print(model_name)\n",
+    "  theta_out = model.encoder(q_grid)\n",
+    "  #theta_out = torch.vmap(model.encoder)(q_grid)\n",
+    "\n",
+    "  theta1 = theta_out[:, 0]\n",
+    "  theta2 = theta_out[:, 1]\n",
+    "\n",
+    "  # Since q1_grid and q2_grid are already on a mesh, we can compute x_end and y_end elementwise.\n",
+    "  x_end = rp[\"l1\"] * torch.cos(q_grid[:, 0]) + rp[\"l2\"] * torch.cos(q_grid[:, 1])\n",
+    "  y_end = rp[\"l1\"] * torch.sin(q_grid[:, 0]) + rp[\"l2\"] * torch.sin(q_grid[:, 1])\n",
+    "\n",
+    "  # --- Determine configuration (clockwise vs. counterclockwise) for each q ---\n",
+    "  cw_mask, ccw_mask = check_clockwise_vectorized(q_grid)\n",
+    "\n",
+    "  # Counterclockwise points\n",
+    "  x_end_ccw   = x_end[ccw_mask].detach().cpu().numpy()\n",
+    "  y_end_ccw   = y_end[ccw_mask].detach().cpu().numpy()\n",
+    "  theta1_ccw  = theta1[ccw_mask].detach().cpu().numpy()\n",
+    "  theta2_ccw  = theta2[ccw_mask].detach().cpu().numpy()\n",
+    "\n",
+    "  fig, axes = plt.subplots(1, 2, figsize=(12, 5))\n",
+    "\n",
+    "  # --- Bottom row: Counterclockwise ---\n",
+    "  sc3 = axes[0].scatter(x_end_ccw, y_end_ccw, c=theta1_ccw, cmap='viridis', s=5)\n",
+    "  axes[0].set_title(\"Theta0 - Counterclockwise\")\n",
+    "  axes[0].set_xlabel(\"x\")\n",
+    "  axes[0].set_ylabel(\"y\")\n",
+    "  plt.colorbar(sc3, ax=axes[0])\n",
+    "\n",
+    "  sc4 = axes[1].scatter(x_end_ccw, y_end_ccw, c=theta2_ccw, cmap='viridis', s=5)\n",
+    "  axes[1].set_title(\"Theta1 - Counterclockwise\")\n",
+    "  axes[1].set_xlabel(\"x\")\n",
+    "  axes[1].set_ylabel(\"y\")\n",
+    "  plt.colorbar(sc4, ax=axes[1])\n",
+    "\n",
+    "  plt.tight_layout()\n",
+    "  plt.show()\n"
    ]
   }
  ],
