--- a/Kian_code/Learn Transform.ipynb
+++ b/Kian_code/Learn Transform.ipynb
@@ -691,11 +691,27 @@
     "  plt.tight_layout()\n",
     "  plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffd42adf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1fb8106",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "thesis",
+   "display_name": "thesis2",
    "language": "python",
    "name": "python3"
   },
