Fix autoencoder and PD notebook code to work similarly for analytic and NN application

--- a/Kian_code/Controllers/PD.ipynb
+++ b/Kian_code/Controllers/PD.ipynb
@@ -111,18 +111,20 @@
     "#q_des = torch.tensor([[-torch.pi/2, -torch.pi/4]]).requires_grad_().to(device)\n",
     "q_d_des = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
     "\n",
-    "th_start = model.encoder(q_start)\n",
+    "th_start = model.encoder_vmap(q_start)\n",
     "th_d_start = (model.jacobian_enc(q_start) @ q_d_start.T).T\n",
     "th_dd_start = torch.tensor([[0., 0.]]).requires_grad_().to(device) #TODO: Obtain accelerations in thetas\n",
     "\n",
     "is_clockwise_des = transforms.check_clockwise(q_des.squeeze(0))\n",
     "\n",
-    "th_des = model.encoder(q_des)\n",
+    "th_des = model.encoder_vmap(q_des)\n",
     "th_d_des = (model.jacobian_enc(q_des) @ q_d_des.T).T\n",
     "\n",
-    "q_des_est = model.decoder(th_des, is_clockwise_des)\n",
+    "q_des_est = model.decoder_vmap(th_des, is_clockwise_des)\n",
     "q_d_des_est = (model.jacobian_dec(th_des, clockwise=is_clockwise_des) @ th_d_des.T).T\n",
-    "xy_des_est, _ = transforms.forward_kinematics(rp, q_des_est[0])"
+    "xy_des_est, _ = transforms.forward_kinematics(rp, q_des_est[0])\n",
+    "\n",
+    "print(model.jacobian_enc(q_start))"
    ]
   },
   {
@@ -138,13 +140,14 @@
     "\n",
     "\n",
     "dt = 0.01\n",
-    "t_end = 15\n",
+    "t_end = 5\n",
     "t_series = torch.arange(0, t_end, dt)\n",
     "\n",
     "th = th_start\n",
     "th_d = th_d_start\n",
     "th_dd = th_dd_start\n",
     "\n",
+    "print(th_start)\n",
     "q_est = model.decoder(th_start, clockwise=is_clockwise_start)\n",
     "q_d_est = (model.jacobian_dec(th_start, clockwise=is_clockwise_start) @ th_d_start.T).T\n",
     "q_dd_est = torch.zeros((1,2))\n",
@@ -178,7 +181,7 @@
     "\n",
     "    if model_shifting:\n",
     "        q = transforms.shift_q(q, clockwise=model_cw)\n",
-    "    th = model.encoder(q)\n",
+    "    th = model.encoder_vmap(q)\n",
     "    th_d = (model.jacobian_enc(q) @ q_d.T).T\n",
     "    \n",
     "\n",
@@ -195,6 +198,7 @@
     "\n",
     "\n",
     "    \"\"\" Feed-forward simulation of the system, not on real dynamics \"\"\"\n",
+    "\n",
     "    M_th, C_th, G_th = transforms.transform_dynamical_from_inverse(M_q, C_q, G_q, th, th_d, J_h_inv, J_h_inv_trans)\n",
     "    A_th = transforms.transform_input_matrix_from_inverse_trans(A_q, J_h_inv_trans, device)\n",
     "\n",
@@ -217,8 +221,8 @@
     "    \n",
     "\n",
     "    q_real_shifted = transforms.shift_q(q_real, clockwise=model_cw)\n",
-    "    th = model.encoder(q_real_shifted)\n",
-    "    q_est = model.decoder(th, clockwise=transforms.check_clockwise(q_real.squeeze(0)))\n",
+    "    th = model.encoder_vmap(q_real_shifted)\n",
+    "    q_est = model.decoder_vmap(th, clockwise=transforms.check_clockwise(q_real.squeeze(0)))\n",
     "    q_est = transforms.wrap_to_pi(q_est)\n",
     "    th_d = (model.jacobian_enc(q_real) @ q_d_real.T).T\n",
     "    q_d_est = (model.jacobian_dec(th, clockwise=is_clockwise) @ th_d.T).T\n",
@@ -331,9 +335,9 @@
     "\n",
     "ref_poss = [ref_pos_real]#, ref_pos_est]#, ref_pos_naive]\n",
     "\n",
-    "#frames_data = [data_real, data_est]#, data_naive]\n",
+    "frames_data = [data_real, data_est]#, data_naive]\n",
     "#frames_data = [data_est]\n",
-    "frames_data = [data_real]\n",
+    "#frames_data = [data_real]\n",
     "\n",
     "name_rp = \"RP:(\" + str(rp[\"xa\"]) + \",\" + str(rp[\"ya\"]) + \")_\"\n",
     "name_ref = \"ref:(\" + str(xy_des_real[0].item()) + \",\" + str(xy_des_real[1].item()) + \")_\"\n",
