--- a/Kian_code/Learning/Learn Transform.ipynb
+++ b/Kian_code/Learning/Learn Transform.ipynb
@@ -2,26 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "85bd716d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['/home/kian/Documents/Thesis/ICS_fork/ics-pa-sv/Kian_code', '/home/kian/anaconda3/envs/thesis2/lib/python311.zip', '/home/kian/anaconda3/envs/thesis2/lib/python3.11', '/home/kian/anaconda3/envs/thesis2/lib/python3.11/lib-dynload', '', '/home/kian/anaconda3/envs/thesis2/lib/python3.11/site-packages']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
     "\n",
     "module_path = os.path.abspath(os.path.join('..'))\n",
     "if module_path not in sys.path:\n",
-    "    sys.path.insert(0, module_path)\n",
-    "print(sys.path)\n"
+    "    sys.path.insert(0, module_path)"
    ]
   },
   {
@@ -29,16 +20,7 @@
    "execution_count": null,
    "id": "7277c8f9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/kian/anaconda3/envs/thesis2/lib/python3.11/site-packages/torch/cuda/__init__.py:129: UserWarning: CUDA initialization: CUDA unknown error - this may be due to an incorrectly set up environment, e.g. changing env variable CUDA_VISIBLE_DEVICES after program start. Setting the available devices to be zero. (Triggered internally at /opt/conda/conda-bld/pytorch_1729647429097/work/c10/cuda/CUDAFunctions.cpp:108.)\n",
-      "  return torch._C._cuda_getDeviceCount() > 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import torch\n",
@@ -59,7 +41,7 @@
     "import training_data as training_data\n",
     "import Plotting.theta_visualiser as theta_visualizer\n",
     "\n",
-    "import Models.autoencoders as autoencoders\n",
+    "import autoencoders\n",
     "\n",
     "from functools import partial\n",
     "\n",
