Save model together with training figures in separate folder

--- a/Kian_code/Learning/Learn Transform.ipynb
+++ b/Kian_code/Learning/Learn Transform.ipynb
@@ -112,13 +112,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def points_plotter(points, extend = None):\n",
+    "def points_plotter(points, extend = None, save = False, file_path = None):\n",
     "\n",
     "   \"\"\" \n",
     "   Simple plotter function which visualizes the points used for training of the Autoencoder. \n",
     "   \"\"\"\n",
     "    \n",
-    "   plt.figure(figsize=(4, 4))\n",
+    "   plt.figure(figsize=(6, 6))\n",
     "   plt.scatter(points[:, 0].cpu().numpy(), points[:, 1].cpu().numpy(), alpha=0.6, edgecolors='k', s=20)\n",
     "   plt.title('Scatter Plot of q1 vs q2')\n",
     "   plt.xlabel('q1')\n",
@@ -126,6 +126,9 @@
     "   plt.xlim(-2*torch.pi, 2*torch.pi)\n",
     "   plt.ylim(-2*torch.pi, 2*torch.pi)\n",
     "   plt.grid(True)\n",
+    "   \n",
+    "   if save:\n",
+    "        plt.savefig(file_path, dpi=800)\n",
     "   plt.show()"
    ]
   },
@@ -321,15 +324,16 @@
     "        train_loss_terms = torch.zeros(5)\n",
     "        for index, (q, M_q, A_q) in enumerate(train_dataloader):\n",
     "            q = q.to(device)\n",
-    "\n",
     "            M_q = M_q.to(device)\n",
     "            A_q = A_q.to(device)\n",
+    "\n",
+    "            batch_size = q.size(0)\n",
     "            \n",
     "            theta, J_h, q_hat, J_h_dec, J_h_ana = model(q)  \n",
     "            theta_ana = model.theta_ana(q)\n",
     "                    \n",
     "            loss, loss_terms = loss_fun(q, theta, q_hat, M_q, A_q, J_h, J_h_dec)\n",
-    "\n",
+    "            \n",
     "            optimizer.zero_grad()\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
@@ -376,7 +380,7 @@
     "            f'l_recon: {tlt[0]:.4f}, l_inertia: {tlt[1]:.4f}, l_input: {tlt[2]:.4f}, l_input_jac: {tlt[3]:.4f}, l_theta: {tlt[4]:.4f}'\n",
     "        )\n",
     "        \n",
-    "    return(model, train_losses, val_losses, file_path)\n"
+    "    return(model, train_losses, val_losses, dir_path, file_path)\n"
    ]
   },
   {
@@ -397,14 +401,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_loss(train_losses, val_losses, log = False):\n",
+    "def plot_loss(train_losses, val_losses, log = False, save = False, file_path = None):\n",
     "\n",
     "    \"\"\"\n",
     "    Plots training and validation loss. \n",
     "    ylim\" and \"yscale\" should be enabled depending on the loss function.\n",
     "    \"\"\"\n",
     "\n",
-    "    plt.figure(figsize=(5, 3))\n",
+    "    plt.figure(figsize=(10, 6))\n",
     "    plt.plot(train_losses, label=\"Training Loss\")\n",
     "    plt.plot(val_losses, label=\"Validation Loss\")\n",
     "    plt.xlabel(\"Epoch\")\n",
@@ -415,6 +419,8 @@
     "    plt.grid(True)\n",
     "    if log:\n",
     "        plt.yscale(\"log\")\n",
+    "    if save:\n",
+    "        plt.savefig(file_path, dpi=800)\n",
     "    plt.show()\n"
    ]
   },
@@ -556,15 +562,16 @@
     "current_time = datetime.now().strftime(\"%Y%m%d%H%M\")\n",
     "\n",
     "shifted_points = mask_points(q1_split, clockwise=train_clockwise)\n",
-    "points_plotter(shifted_points)\n",
+    "\n",
     "dataset = make_dataset(shifted_points)\n",
     "(train_dataloader, val_dataloader) = make_dataloaders(dataset=dataset, batch_size=batch_size, train_part=train_part)\n",
-    "\n",
     "outputs = []\n",
-    "model, train_losses, val_losses, file_path = train_AE_model(rp, device, lr, num_epochs, q1_split, train_dataloader, \n",
+    "model, train_losses, val_losses, dir_path, file_path = train_AE_model(rp, device, lr, num_epochs, q1_split, train_dataloader, \n",
     "                                                        val_dataloader, current_time)\n",
-    "\n",
-    "plot_loss(train_losses, val_losses, log = True)\n",
+    "points_path = os.path.join(dir_path, \"points.png\")\n",
+    "points_plotter(shifted_points, save = True, file_path = points_path)\n",
+    "fig_path = os.path.join(dir_path, \"loss.png\")\n",
+    "plot_loss(train_losses, val_losses, log = True, save = True, file_path = fig_path)\n",
     "mapping_functions = (partial(theta_1_single,model), \n",
     "                        partial(theta_2_single,model), \n",
     "                        partial(q_hat_1_single,model), \n",
