Change loss weights, improve loss calculation to consider batch size

--- a/Kian_code/Learning/Learn Transform.ipynb
+++ b/Kian_code/Learning/Learn Transform.ipynb
@@ -259,12 +259,12 @@
     "    l_inertia = F.mse_loss(M_th, M_eye, reduction=\"mean\")\n",
     "\n",
     "    f_recon        = 10.\n",
-    "    f_diag         = 0. #TODO: CHECK OUT THESE LOSS WEIGHTS\n",
-    "    f_off_diag     = 0. #TODO: CHECK OUT THESE LOSS WEIGHTS\n",
+    "    f_diag         = 1. #TODO: CHECK OUT THESE LOSS WEIGHTS\n",
+    "    f_off_diag     = 1. #TODO: CHECK OUT THESE LOSS WEIGHTS\n",
     "    f_input        = 1.\n",
-    "    f_input_jac    = 0.\n",
-    "    f_theta        = 0.\n",
-    "    f_inertia      = 10.\n",
+    "    f_input_jac    = 1.\n",
+    "    f_theta        = 1.\n",
+    "    f_inertia      = 0. #TODO: CHECK OUT THESE LOSS WEIGHTS\n",
     "    \n",
     "    #loss_terms = torch.tensor([l_recon * f_recon, l_diag * f_diag, l_off_diag * f_off_diag, \n",
     "    #                           l_input * f_input, l_input_jac * f_input_jac, l_theta * f_theta])\n",
@@ -274,10 +274,7 @@
     "                               l_input * f_input, l_input_jac * f_input_jac, l_theta * f_theta])\n",
     "    loss_sum = l_recon * f_recon + l_inertia * f_inertia + l_input * f_input + l_input_jac * f_input_jac + l_theta * f_theta\n",
     "\n",
-    "\n",
-    "    lamda = 100\n",
-    "\n",
-    "    return lamda * loss_sum, lamda * loss_terms"
+    "    return loss_sum, loss_terms"
    ]
   },
   {
@@ -305,10 +302,12 @@
     "    train_losses = []\n",
     "    val_losses = []\n",
     "    start_time = time.time()\n",
-    "    save_directory = os.path.join(os.getcwd(), \"Models/Split_AEs\")\n",
-    "    os.makedirs(save_directory, exist_ok=True)\n",
-    "    file_name = f\"Lumped_Mass_{current_time}.pth\"\n",
-    "    file_path = os.path.join(save_directory, file_name)\n",
+    "    save_directory = os.path.join(os.getcwd(), \"Models\")\n",
+    "    dir_name = f\"NN_{current_time}\"\n",
+    "    dir_path = os.path.join(save_directory, dir_name)\n",
+    "    os.makedirs(dir_path, exist_ok=True)\n",
+    "    file_name = f\"NN_{current_time}\" + \".pth\"\n",
+    "    file_path = os.path.join(dir_path, file_name)\n",
     "\n",
     "    JSON = {\"q1_low\" : q1_split[0],\n",
     "            \"q1_high\" : q1_split[1],\n",
@@ -329,7 +328,7 @@
     "\n",
     "            batch_size = q.size(0)\n",
     "            \n",
-    "            theta, J_h, q_hat, J_h_dec, J_h_ana = model(q)  \n",
+    "            theta, J_h, q_hat, J_h_dec, J_h_ana = model.forward(q)  \n",
     "            theta_ana = model.theta_ana(q)\n",
     "                    \n",
     "            loss, loss_terms = loss_fun(q, theta, q_hat, M_q, A_q, J_h, J_h_dec)\n",
@@ -338,10 +337,10 @@
     "            loss.backward()\n",
     "            optimizer.step()\n",
     "            \n",
-    "            train_loss += loss.item()\n",
-    "            train_loss_terms += loss_terms\n",
-    "        train_loss /= len(train_dataloader.dataset)\n",
-    "        train_loss_terms /= len(train_dataloader.dataset)\n",
+    "            train_loss += loss.item() * batch_size\n",
+    "            train_loss_terms += loss_terms * batch_size\n",
+    "        train_loss /= len(train_dataloader.dataset) \n",
+    "        train_loss_terms /= len(train_dataloader.dataset) \n",
     "        train_losses.append(train_loss)\n",
     "\n",
     "        # Validation phase\n",
@@ -354,17 +353,15 @@
     "                M_q = M_q.to(device)\n",
     "                A_q = A_q.to(device)\n",
     "\n",
-    "                theta, J_h, q_hat, J_h_dec, J_h_ana = model(q)\n",
+    "                batch_size = q.size(0)\n",
+    "\n",
+    "                theta, J_h, q_hat, J_h_dec, J_h_ana = model.forward(q)\n",
     "                theta_ana = model.theta_ana(q)\n",
     "\n",
     "                loss, loss_terms = loss_fun(q, theta, q_hat, M_q, A_q, J_h, J_h_dec)\n",
     "\n",
-    "                J_h_inv = torch.linalg.inv(J_h)\n",
-    "                J_h_inv_trans = torch.transpose(J_h_inv, 1, 2)\n",
-    "                M_th = J_h_inv_trans @ M_q @ J_h_inv \n",
-    "\n",
-    "                val_loss += loss.item()\n",
-    "                val_loss_terms += loss_terms\n",
+    "                val_loss += loss.item() * batch_size\n",
+    "                val_loss_terms += loss_terms * batch_size\n",
     "        val_loss /= len(val_dataloader.dataset)\n",
     "        val_loss_terms /= len(val_dataloader.dataset)\n",
     "        val_losses.append(val_loss)\n",
