Fix code after moving

--- a/Kian_code/Controllers/collocated.ipynb
+++ b/Kian_code/Controllers/collocated.ipynb
@@ -19,7 +19,7 @@
     "    sys.path.insert(0, module_path)\n",
     "print(sys.path)\n",
     "\n",
-    "import Models.autoencoders as autoencoders\n",
+    "import Learning.autoencoders as autoencoders\n",
     "import Double_Pendulum.Lumped_Mass.robot_parameters as robot_parameters\n",
     "import Double_Pendulum.Lumped_Mass.transforms as transforms\n",
     "import Double_Pendulum.Lumped_Mass.dynamics as dynamics\n",
@@ -52,7 +52,7 @@
     "\n",
     "if neural_net:\n",
     "    model = autoencoders.Autoencoder_double(rp).to(device)\n",
-    "    model_location = '../Models/Split_AEs/Lumped_Mass_ccw_12k_epochs.pth'\n",
+    "    model_location = '../Learning/Models/Lumped_Mass_ccw_12k_epochs.pth'\n",
     "    model.load_state_dict(torch.load(model_location, weights_only=True))\n",
     "else:\n",
     "    model = autoencoders.Analytic_transformer(rp)"
@@ -72,7 +72,7 @@
     "                   [0., 0.]]).to(device)\n",
     "#\"\"\"\n",
     "\n",
-    "# When controlling on th_1\n",
+    "# When controlling on th_1, just for testing\n",
     "\"\"\"\n",
     "Kp = torch.tensor([[0., 0.], \n",
     "                   [0., 100.]]).to(device)\n",
@@ -80,13 +80,13 @@
     "                   [0., 40.]]).to(device)\n",
     "\"\"\"\n",
     "\n",
-    "# When controlling on both th_0 and th_1\n",
-    "#\"\"\"\n",
+    "# When controlling on both th_0 and th_1, just for testing\n",
+    "\"\"\"\n",
     "Kp = torch.tensor([[100., 0.], \n",
     "                   [0., 10.]]).to(device)\n",
     "Kd = torch.tensor([[40., 0.], \n",
     "                   [0., 10.]]).to(device)\n",
-    "#\"\"\"\n",
+    "\"\"\"\n",
     "\n",
     "#C_damp = torch.tensor([[12., 0.], [0., 12.]]).to(device)"
    ]
