Change plot and figure saving to separate folder per simulation

--- a/Kian_code/Controllers/collocated.ipynb
+++ b/Kian_code/Controllers/collocated.ipynb
@@ -13,6 +13,8 @@
     "import numpy as np\n",
     "import matplotlib.cm as cm\n",
     "import scipy\n",
+    "from datetime import datetime\n",
+    "import json\n",
     "\n",
     "module_path = os.path.abspath(os.path.join('..'))\n",
     "if module_path not in sys.path:\n",
@@ -133,6 +135,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "timestamp = datetime.now().strftime(\"%Y-%m-%d_%H-%M-%S\")\n",
+    "\n",
     "th_series, th_d_series, th_dd_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
     "q_est_series, q_d_est_series, q_dd_est_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
     "q_real_series, q_d_real_series, q_dd_real_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
@@ -140,7 +144,7 @@
     "\n",
     "\n",
     "dt = 0.01\n",
-    "t_end = 5\n",
+    "t_end = 2\n",
     "t_series = torch.arange(0, t_end, dt)\n",
     "\n",
     "th = th_start\n",
@@ -278,6 +282,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "save_dir = f\"results_collocated/simulation_{timestamp}\"\n",
+    "os.makedirs(save_dir, exist_ok=True)\n",
+    "print(xy_start[1])\n",
+    "print(Kp[0,0].item())\n",
+    "metadata = {\n",
+    "    \"timestamp\": timestamp,\n",
+    "    \"Learned transform\": neural_net,\n",
+    "    \"Model clockwise\": model_cw,\n",
+    "    \"Model shifting\": model_shifting, \n",
+    "    \"PD gains\": {\n",
+    "        \"Kp\": [[Kp[0,0].item(), Kp[0,1].item()], \n",
+    "               [Kp[1,0].item(), Kp[1,1].item()]],  \n",
+    "        \"Kd\": [[Kd[0,0].item(), Kd[0,1].item()], \n",
+    "               [Kd[1,0].item(), Kd[1,1].item()]]   \n",
+    "    },\n",
+    "    \"Actuator location\": {\"x_a\": rp[\"xa\"], \"y_a\": rp[\"ya\"]},\n",
+    "    \"xy start\": {\"x\": xy_start[0].item(), \"y\": xy_start[1].item()},\n",
+    "    \"Time step\": dt,\n",
+    "    \"Sim time\": t_end,\n",
+    "}\n",
+    "\n",
+    "metadata[\"PD gains\"][\"Kp\"] = str(metadata[\"PD gains\"][\"Kp\"])\n",
+    "metadata[\"PD gains\"][\"Kd\"] = str(metadata[\"PD gains\"][\"Kd\"])\n",
+    "\n",
+    "metadata_path = os.path.join(save_dir, \"metadata.json\")\n",
+    "with open(metadata_path, \"w\") as f:\n",
+    "    json.dump(metadata, f, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "stride = 5\n",
     "pos_end_q_real, pos_elbow_q_real = torch.vmap(transforms.forward_kinematics, in_dims=(None, 0))(rp, q_real_series[::stride])\n",
     "pos_end_q_est, pos_elbow_q_est = torch.vmap(transforms.forward_kinematics, in_dims=(None, 0))(rp, q_est_series[::stride])\n",
@@ -347,23 +386,18 @@
     "else:\n",
     "    model_type = \"AL\"\n",
     "\n",
-    "\n",
-    "file_name = name_rp + name_ref + model_type\n",
-    "file_name = file_name + \"_0.mp4\"\n",
+    "file_name = \"t_end:[\" + str(t_end) + \"]_dt:[\" + str(dt) + \"]_stride:[\" + str(stride) + \"]_0.mp4\"\n",
     "file_counter = 0\n",
     "\n",
-    "script_dir = os.getcwd()\n",
-    "output_path = os.path.join(script_dir, \"..\", \"Plotting\", \"Pendulum_plots\", file_name)\n",
+    "output_path = os.path.join(save_dir, file_name)\n",
     "\n",
     "while os.path.isfile(output_path):\n",
     "    print(\"file name already exists\")\n",
     "    file_counter += 1\n",
     "    file_name = file_name[:-6] + \"_\" + str(file_counter) + \".mp4\"\n",
-    "    output_path = os.path.join(script_dir, \"..\", \"Plotting\", \"Pendulum_plots\", file_name)\n",
+    "    output_path = os.path.join(save_dir, file_name)\n",
     "\n",
-    "\n",
-    "\n",
-    "plotter.animate_pendulum(frames_data, ref_poss=ref_poss, plot_actuator=True, file_name=file_name, fps = 1/(dt*stride), dt = dt*stride)\n",
+    "plotter.animate_pendulum(frames_data, ref_poss=ref_poss, plot_actuator=True, save_path=output_path, fps = 1/(dt*stride), dt = dt*stride)\n",
     "#plotter.animate_pendulum(frames_data, ref_pos=None, plot_actuator=False, file_name=file_name, fps = 1/(dt*stride), dt = dt*stride)\n"
    ]
   },
@@ -426,9 +460,6 @@
     "name_th = \"th trajectory\"\n",
     "name_xy = \"xy trajectory\"\n",
     "t_series = torch.arange(0, t_end, dt)\n",
-    "# Ensure the results directory exists.\n",
-    "result_path = \"./results\"\n",
-    "os.makedirs(result_path, exist_ok=True)\n",
     "\n",
     "# Create an instance of ErrorPlotter.\n",
     "ep = pendulum_plot.Error_plotter(rp)\n",
@@ -440,8 +471,13 @@
     "column3 = ep.create_plot_dataset(t=t_series, datasets=datasets_xy, reference=xy_des_real.unsqueeze(0), name=name_xy)\n",
     "plot_datasets = [column1, column2, column3]\n",
     "\n",
+    "file_name = \"Error plot.png\"\n",
+    "file_counter = 0\n",
+    "\n",
+    "output_path = os.path.join(save_dir, file_name)\n",
+    "\n",
     "# Pass the list of columns (plot_dataset objects) to plot_multi.\n",
-    "ep.plot_multi(plot_datasets=plot_datasets, file_name=\"Trajectory_plots\", axes_names = [\"q\", \"th\", \"xy\"])"
+    "ep.plot_multi(plot_datasets=plot_datasets, save_path=output_path, axes_names = [\"q\", \"th\", \"xy\"])"
    ]
   },
   {
