Update imports for new location

--- a/Kian_code/Controllers/collocated.ipynb
+++ b/Kian_code/Controllers/collocated.ipynb
@@ -22,9 +22,9 @@
     "print(sys.path)\n",
     "\n",
     "import Learning.autoencoders as autoencoders\n",
-    "import Double_Pendulum.Lumped_Mass.robot_parameters as robot_parameters\n",
-    "import Double_Pendulum.Lumped_Mass.transforms as transforms\n",
-    "import Double_Pendulum.Lumped_Mass.dynamics as dynamics\n",
+    "import Double_Pendulum.robot_parameters as robot_parameters\n",
+    "import Double_Pendulum.transforms as transforms\n",
+    "import Double_Pendulum.dynamics as dynamics\n",
     "import Plotting.pendulum_plot as pendulum_plot\n",
     "\n",
     "from functools import partial\n",
